# EasyEnglish

./: .clang-format  .clang-tidy  .design.md  .editorconfig  .gitignore  .interface.md  AGENTS.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  LICENSE  README.md  product.json  rust-toolchain.toml  vcpkg.json  win_debug.bat  win_release.bat
.cargo/: config.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/agents/: m2a-module-designer.agent.md  rust-test-guardian.agent.md
.github/instructions/: docs.instructions.md  rust.instructions.md
.github/skills/hyperv-operation/: SKILL.md
.github/skills/local-install/: SKILL.md
.github/skills/m2a-module-scaffold/: SKILL.md
.github/skills/release-package/: SKILL.md
.github/skills/rust-quality-gate/: SKILL.md
.github/workflows/: ci.yml  release.yml
Agent/: .design.md  .interface.md
Agent/tests/: .test.md
App/: .design.md  .interface.md
App/Linux/: .interface.md
App/Linux/src/: lib.rs
App/Mac/: .interface.md  Cargo.toml
App/Mac/src/: lib.rs
App/Win/: .design.md  Cargo.toml  win_debug.bat  win_package.bat  win_release.bat
App/Win/installer/: easyenglish.iss
App/Win/src/: dict.rs  focus.rs  imp.rs  lib.rs  logging.rs  main.rs  overlay.rs  runner.rs  signals.rs  tray.rs  win32.rs
Core/: .interface.md  Cargo.toml
Core/src/: config.rs  history.rs  lib.rs  lookup.rs  notes.rs  state.rs
Core/src/algo/: mod.rs
Core/src/hub/: mod.rs
Core/src/record/: history.rs  mod.rs  note.rs  word_cn.rs  word_en.rs
Core/src/search/: mod.rs
Core/src/storage/: .design.md  .interface.md  .test.md  mod.rs
Core/tests/: .test.md  test_config.rs  test_history.rs  test_hub.rs  test_lookup.rs  test_notes.rs  test_record.rs  test_search.rs  test_state.rs  test_storage.rs  word_list_test.rs
Dict/: .design.md  .interface.md  Cargo.toml  word_cn_v1  word_en_v1  word_en_v1.sqlite  word_en_v2.sqlite  word_en_v3.sqlite  word_list_v1  word_list_v2  word_list_v3
Dict/data/: seed_en_cn.json
Dict/src/: entry.rs  lib.rs  store.rs
Dict/tests/: .test.md  test_seeder.rs  test_store.rs
Linux/: .design.md  .interface.md  Cargo.toml
Linux/src/: lib.rs
Mac/: .design.md  .interface.md
Mac/src/: lib.rs
Skill/: .design.md  .interface.md
Skill/tests/: .test.md
Tests/UITest/: README.md
Tests/UnitTest/: Cargo.toml
Tests/UnitTest/tests/: app_win.rs  core.rs  utils.rs
Tests/UnitTest/tests/common/: paths.rs
Tests/UnitTest/tests/core/: algo.rs  generator.rs  search.rs  storage.rs  word_list.rs
Tests/UnitTest/tests/utils/: dynamic_result_concurrency.rs  dynamic_result_spawn.rs
Utils/: .design.md  .interface.md  Cargo.toml
Utils/src/: dynamic_result.rs  lib.rs
Utils/tests/: .test.md  test_dr_basic.rs  test_dr_producer.rs  test_dr_signals.rs
Win/: .design.md  .interface.md
Win/src/: lib.rs
assets/fonts/: .gitignore
docs/: architecture.md  plan.md
docs/adr/: 0001-choose-qt6.md  0002-switch-to-imgui.md  0003-tray-overlay.md  0004-rewrite-in-rust-m2a-style.md  0005-expand-dictionary-ecdict-100k.md  0006-chinese-to-english-dictionary.md  _TEMPLATE.md
docs/contracts/: _TEMPLATE.md  dictionary.md  favorites.md  history.md  network.md  platform.md  storage.md  ui-mainview.md  ui-mainwindow.md
docs/prompts/: bugfix-task.md  feature-task.md  refactor-task.md
ee/: .design.md  Cargo.toml  version
ee/.cargo/: config.toml
ee/App/: .design.md
ee/App/Linux/: .design.md  Cargo.toml
ee/App/Linux/src/: lib.rs
ee/App/Mac/: .design.md
ee/Core/: .design.md  Cargo.toml
ee/Core/src/: record_provider.rs
ee/Core/src/record/: history.rs  word_en.rs
ee/Dict/: WIKTIONARY-KAIKKI-LICENSE.txt  word_ar_v1  word_ar_v1.sqlite  word_cn_v1  word_en_ar_v1  word_en_ar_v1.sqlite  word_en_es_v1  word_en_fr_v1  word_en_hi_v1  word_en_hi_v1.sqlite  word_en_hk_v1  word_en_id_v1  word_en_id_v1.sqlite  word_en_ja_v1  word_en_ko_v1  word_en_ko_v1.sqlite  word_en_pt_v1  word_en_vi_v1  word_en_vi_v1.sqlite  word_es_v1  word_fr_v1  word_hi_v1  word_hi_v1.sqlite  word_hk_v1  word_id_v1  word_id_v1.sqlite  word_ja_v1  word_ko_v1  word_ko_v1.sqlite  word_pt_v1  word_vi_v1  word_vi_v1.sqlite
installer/: EasyEnglish.iss
readme/: README.ar.md  README.es.md  README.fr.md  README.hi.md  README.id.md  README.ja.md  README.ko.md  README.pt-BR.md  README.vi.md  README.zh-CN.md  README.zh-HK.md
skills/hyperv-operation/: SKILL.md
skills/local-install/: SKILL.md
src/: CMakeLists.txt  main.cpp
src/app/: AppState.cpp  AppState.hpp  CMakeLists.txt  placeholder.cpp
src/core/: CMakeLists.txt  placeholder.cpp
src/core/dictionary/: ApiDictionary.cpp  ApiDictionary.hpp  CMakeLists.txt  Entry.hpp  IDictionary.hpp  SqliteDictionary.cpp  SqliteDictionary.hpp  errors.hpp
src/core/favorites/: CMakeLists.txt  FavoritesStore.cpp  FavoritesStore.hpp
src/core/history/: CMakeLists.txt  HistoryStore.cpp  HistoryStore.hpp
src/core/network/: CMakeLists.txt  HttpNetworkClient.cpp  HttpNetworkClient.hpp  INetworkClient.hpp  QtNetworkClient.cpp  QtNetworkClient.hpp
src/core/storage/: CMakeLists.txt  Database.cpp  Database.hpp  Statement.cpp  Statement.hpp  errors.hpp
src/platform/: CMakeLists.txt  IPlatformShell.hpp  StubPlatformShell.cpp
src/platform/win32/: Win32PlatformShell.cpp
src/ui/: CMakeLists.txt  MainView.cpp  MainView.hpp  MainWindow.cpp  MainWindow.hpp
tests/: CMakeLists.txt
tests/app/: CMakeLists.txt  test_app_state.cpp
tests/benchmarks/: CMakeLists.txt  bench_lookup.cpp  bench_smoke.cpp
tests/fixtures/: mini_dict.sqlite
tests/ui/: CMakeLists.txt  test_e2e_main_flow.cpp  test_mainwindow_search.cpp  test_mainwindow_smoke.cpp
tests/unit/: CMakeLists.txt  smoke_test.cpp
tests/unit/dictionary/: CMakeLists.txt  test_sqlite_dictionary.cpp
tests/unit/favorites/: CMakeLists.txt  test_favorites_store.cpp
tests/unit/history/: CMakeLists.txt  test_history_store.cpp
tests/unit/network/: CMakeLists.txt  test_api_dictionary.cpp
tests/unit/storage/: CMakeLists.txt  test_database.cpp  test_fixture_mini_dict.cpp  test_statement.cpp
tools/: build_installer.ps1  check_core_no_ui.py  seed_db.py
(+66 files in other folders)
