[package]
name        = "ee-core"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }
description = "EasyEnglish — config, lookup orchestration, history, notes, and AppState."

[lib]
path = "src/lib.rs"

[dependencies]
ee-dict     = { path = "../Dict" }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }

[dev-dependencies]
tempfile    = { workspace = true }

[lints]
workspace = true
