[package]
name        = "ee-dict"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }
description = "EasyEnglish — offline English→Chinese dictionary data + access layer."

[lib]
# Conventional Rust library; the binary lives in the platform crates.
path = "src/lib.rs"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
rusqlite    = { workspace = true }

[dev-dependencies]
# tempfile lets us materialize the seed JSON / sqlite db into a per-test
# temporary directory so tests never collide and never need cleanup.
tempfile    = { workspace = true }

[lints]
workspace = true
