[package]
name        = "ee-win"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }
description = "EasyEnglish — Windows platform shell (placeholder)."

[lib]
path = "src/lib.rs"

[dependencies]
# Phase 2 will introduce: windows-rs (tray + LowLevelMouseHook), winit, egui, cargo-wix

[dev-dependencies]

[lints]
workspace = true
