[package]
name        = "ee-win"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }
description = "EasyEnglish — Windows platform shell (placeholder)."

[lib]
path = "src/lib.rs"

[dependencies]
# Cross-platform deps built on every host (added in iter-018+):
#   ee-core  = { path = "../../Core" }   # AppState binding
#   ee-utils = { path = "../../Utils" }  # DynamicResult for UI streams

# ---------------------------------------------------------------------------
# Windows-only deps. Anything that won't compile on macOS/Linux MUST go here,
# not in the unconditional [dependencies] block above, so that
# `cargo build --workspace` on a non-Windows host can still compile this
# crate (it becomes a near-empty stub via the cfg gates in src/lib.rs).
# ---------------------------------------------------------------------------
[target.'cfg(target_os = "windows")'.dependencies]
# windows     = { version = "0.56", features = [...] }
# windows-sys = "0.52"
# winit       = "0.30"
# egui        = "0.28"
# cargo-wix lives in Cargo.toml metadata, not here.

[dev-dependencies]

[lints]
workspace = true
