[package]
name        = "ee-win"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }
description = "EasyEnglish — Windows platform shell (placeholder)."

[lib]
path = "src/lib.rs"

[[bin]]
name = "ee-win"
path = "src/main.rs"


[dependencies]
# Cross-platform deps built on every host:
ee-core  = { path = "../../Core" }
ee-utils = { path = "../../Utils" }

# ---------------------------------------------------------------------------
# Windows-only deps. Anything that won't compile on macOS/Linux MUST go here,
# not in the unconditional [dependencies] block above, so that
# `cargo build --workspace` on a non-Windows host can still compile this
# crate (it becomes a near-empty stub via the cfg gates in src/lib.rs).
# ---------------------------------------------------------------------------
[target.'cfg(target_os = "windows")'.dependencies]
eframe = { version = "0.28", features = ["glow"] }
egui = "0.28"
image = { version = "0.24", features = ["png"] }
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_Security"
] }


[dev-dependencies]

[lints]
workspace = true
